Statistics rework
