# CoinCollectionFrontend/src/api/services/HistoryService.ts
@@ -8,34 +8,46 @@ import { OpenAPI } from '../core/OpenAPI';
 import { request as __request } from '../core/request';
 export class HistoryService {
     /**
-     * @param coinId
+     * @param currencyId
+     * @param value
+     * @param year
      * @returns HistoryEntryByCoinDto Success
      * @throws ApiError
      */
-    public static getHistoryById(
-        coinId: number,
+    public static getHistory(
+        currencyId?: number,
+        value?: number,
+        year?: number,
     ): CancelablePromise<Array<HistoryEntryByCoinDto>> {
         return __request(OpenAPI, {
             method: 'GET',
-            url: '/History/by-id/{coinId}',
-            path: {
-                'coinId': coinId,
+            url: '/History',
+            query: {
+                'currencyId': currencyId,
+                'value': value,
+                'year': year,
             },
         });
     }
     /**
-     * @param coinId
+     * @param currencyId
+     * @param value
+     * @param year
      * @returns any Success
      * @throws ApiError
      */
-    public static getHistoryByIdUpdates(
-        coinId: number,
+    public static getHistoryUpdates(
+        currencyId?: number,
+        value?: number,
+        year?: number,
     ): CancelablePromise<any> {
         return __request(OpenAPI, {
             method: 'GET',
-            url: '/History/by-id/{coinId}/updates',
-            path: {
-                'coinId': coinId,
+            url: '/History/updates',
+            query: {
+                'currencyId': currencyId,
+                'value': value,
+                'year': year,
             },
         });
     }
